Add SuperSU link + move ControlCenter to the top
Change-Id: Ib5a674b6ed6e46ffd70a326cc0ee0d59d640f70f

--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -17,7 +17,6 @@
 <preference-headers
         xmlns:android="http://schemas.android.com/apk/res/android">
 
-
     <!-- WIRELESS and NETWORKS -->
     <header android:id="@+id/wireless_section"
         android:title="@string/header_category_wireless_networks" />
@@ -64,6 +63,18 @@
         android:breadCrumbTitle="@string/wireless_networks_settings_title"
         android:fragment="com.android.settings.WirelessSettings"
         android:icon="@drawable/empty_icon" />
+
+    <!-- Kat Settings -->
+    <header android:title="@string/kat_settings" />
+    <header
+        android:id="@+id/kat_control_center"
+        android:title="@string/kat_settings"
+        android:icon="@drawable/kat_control_center">
+                <intent
+            android:action="android.intent.action.MAIN"
+            android:targetClass="org.kat.controlcenter.Main"
+            android:targetPackage="org.kat.controlcenter" />
+    </header>
 
     <!-- DEVICE -->
     <header android:id="@+id/device_section"
@@ -164,18 +175,6 @@
             android:action="android.settings.ADD_ACCOUNT_SETTINGS"/>
     </header>
     
-    <!-- Kat Settings -->
-    <header android:title="@string/kat_settings" />
-    <header
-        android:id="@+id/kat_control_center"
-        android:title="@string/kat_settings"
-        android:icon="@drawable/kat_control_center">
-		<intent
-            android:action="android.intent.action.MAIN"
-            android:targetClass="org.kat.controlcenter.Main"
-            android:targetPackage="org.kat.controlcenter" />
-	</header>
-		
     <!-- SYSTEM -->
     <header android:id="@+id/system_section"
         android:title="@string/header_category_system" />
@@ -200,6 +199,16 @@
         android:fragment="com.android.settings.DevelopmentSettings"
         android:icon="@drawable/ic_settings_development"
         android:title="@string/development_settings_title" />
+
+    <header
+        android:id="@+id/su_start"
+        android:title="@string/su_start"
+        android:icon="@drawable/ic_settings_security">
+                <intent
+            android:action="android.intent.action.MAIN"
+            android:targetClass="eu.chainfire.supersu.MainActivity"
+            android:targetPackage="eu.chainfire.supersu" />
+    </header>
 
     <!-- About Device -->
     <header
