Add dock settings in menu
Change-Id: If6169c7657ec731c2d19b3819d2cb6f83ae51284

--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -101,6 +101,17 @@
         android:icon="@drawable/ic_settings_battery"
         android:title="@string/power_usage_summary_title" />
 
+    <header
+        android:key="autoparts_dock_settings"
+        android:icon="@drawable/ic_keyboard"
+        android:title="@string/autoparts_dock_settings" >
+        <intent
+            android:action="org.autoparts.action.LAUNCH_DEVICE_SETTINGS"
+            android:targetClass="org.autoparts.settings.device.DeviceSettings"
+            android:targetPackage="org.autoparts.settings.device" />
+    </header>
+
+
     <!-- Application Settings -->
     <header
         android:fragment="com.android.settings.applications.ManageApplications"
