Add UI Settings
Change-Id: Ic5e54d9f3d03d8dea5095c63c2bb05751f2e4187

--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -86,6 +86,13 @@
         android:icon="@drawable/ic_settings_display"
         android:fragment="com.android.settings.DisplaySettings"
         android:title="@string/display_settings" />
+ 
+    <!-- UI -->
+    <header
+        android:id="@+id/ui_settings"
+        android:icon="@drawable/ic_desktop"
+        android:fragment="com.android.settings.katkiss.UISettings"
+        android:title="@string/kk_ui_settings" />
 
     <!-- Storage -->
     <header
