--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -916,4 +916,22 @@
         <!-- Always allow app to send to premium SMS short code. -->
         <item>Always allow</item>
     </string-array>
+
+<!-- KAT -->
+
+    <string-array name="kk_ui_mode_entries">
+        <item>Phablet UI</item>
+<!--        <item>Phablet UI - Nav Bar Left Aligned</item> -->
+        <item>Phablet UI - No Nav Bar</item>
+        <item>Tablet UI</item>
+        <item>Expanded Desktop - No Bars</item>
+    </string-array>
+    <string-array name="kk_ui_mode_values">
+        <item>4</item>
+<!--        <item>0</item> -->
+        <item>1</item>
+        <item>3</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
