--- a/res/xml/kk_ui_settings.xml
+++ b/res/xml/kk_ui_settings.xml
@@ -12,4 +12,12 @@
                 android:entries="@array/kk_ui_mode_entries"
                 android:entryValues="@array/kk_ui_mode_values" />
 
+        <ListPreference
+            android:defaultValue="0"
+            android:entries="@array/kk_ui_navbar_size_entries"
+            android:entryValues="@array/kk_ui_navbar_size_values"
+            android:key="kk_ui_barsize"
+            android:summary="@string/kk_ui_barsize_summary"
+            android:title="@string/kk_ui_barsize_title" />
+
 </PreferenceScreen>
