Add option in UISettings to enable/disable ChooseInputMethod Notification (disabled by default) + Fix NavBar Height being reset after UI Change
Change-Id: Ic03db4f412cd3c808ccc2a29bdabe04af26c1222

--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -61,6 +61,9 @@
     <string name="kk_performance_notification_title">Overclocking</string>
     <string name="kk_performance_notification_text">Not been applied due to recent reboot (less than 2 minutes).</string>
 
+    <string name="inputmethod_shownotification_title">Show InputMethod Chooser Notification</string>
+    <string name="inputmethod_shownotification_summary">Enable/Disable the permanent InputMethod Notification</string>
+
 
 <!-- Arrays -->
 
