--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -8,8 +8,11 @@
     <string name="autoparts_dock_settings">Dock</string>
     <string name="mediascanner_filters">MediaScanner Filters</string>
 
+    <!--  Categories -->
     <string name="kk_ui_general_title">General</string>
     <string name="kk_ui_misc_title">Misc</string>
+    <string name="kk_ui_clock_title">Clock</string>
+    <string name="kk_ui_battery_title">Battery</string>
     
     <string name="kk_ui_settings">User Interface</string>
     <string name="kk_ui_mode">Interface Mode</string>
@@ -64,12 +67,12 @@
     <string name="kk_performance_notification_title">Overclocking</string>
     <string name="kk_performance_notification_text">Not been applied due to recent reboot (less than 2 minutes).</string>
 
-    <string name="kk_ui_battery_title">Battery</string>
-    <string name="kk_ui_battery_settings">Battery Settings</string>
     <string name="kk_ui_battery_icon_title">Show battery icon</string>
     <string name="kk_ui_battery_text_title">Show battery text</string>
     <string name="kk_ui_battery_text_percent_title">Show percent</string>
     
+    <string name="kk_ui_clock_time_title">Show Time</string>
+    <string name="kk_ui_clock_date_title">Show Date</string>
     
     <string name="inputmethod_shownotification_title">Show InputMethod Chooser Notification</string>
     <string name="inputmethod_shownotification_summary">Enable/Disable the permanent InputMethod Notification</string>
