--- a/res/xml/kk_ui_settings.xml
+++ b/res/xml/kk_ui_settings.xml
@@ -45,6 +45,17 @@
     </PreferenceCategory>
         
     <PreferenceCategory
+        android:key="kk_ui_clock"
+        android:title="@string/kk_ui_clock_title" >
+        <CheckBoxPreference
+            android:key="kk_ui_clock_time"
+            android:title="@string/kk_ui_clock_time_title" />
+        <CheckBoxPreference
+            android:key="kk_ui_clock_date"
+            android:title="@string/kk_ui_clock_date_title" />
+        </PreferenceCategory>
+        
+    <PreferenceCategory
         android:key="kk_ui_misc"
         android:title="@string/kk_ui_misc_title" >
     <CheckBoxPreference
