--- a/res/xml/kk_ui_settings.xml
+++ b/res/xml/kk_ui_settings.xml
@@ -7,13 +7,14 @@
     <PreferenceCategory
         android:key="kk_ui_general"
         android:title="@string/kk_ui_general_title" >
-    <ListPreference
-                android:key="kk_ui_mode"
-                android:title="@string/kk_ui_mode"
-                android:summary="@string/kk_ui_mode_summary"
-                android:persistent="false"
-                android:entries="@array/kk_ui_mode_entries"
-                android:entryValues="@array/kk_ui_mode_values" />
+
+        <ListPreference
+            android:key="kk_ui_mode"
+            android:title="@string/kk_ui_mode"
+            android:summary="@string/kk_ui_mode_summary"
+            android:persistent="false"
+            android:entries="@array/kk_ui_mode_entries"
+            android:entryValues="@array/kk_ui_mode_values" />
 
         <ListPreference
             android:defaultValue="0"
@@ -28,6 +29,12 @@
             android:key="ui_interface_navkeys"
             android:title="@string/kk_ui_interface_navkeys"
             android:summary="@string/kk_ui_interface_navkeys_summary"/>
+
+        <PreferenceScreen
+            android:key="quick_settings_panel"
+            android:fragment="com.android.settings.katkiss.QuickSettings"
+            android:title="@string/quick_settings_panel_title" />
+
     </PreferenceCategory>
         
     <PreferenceCategory
