Add HDMI Out to Display Settings + unify / cleanup
Change-Id: I527671bfd1672baa2a8093500fa7531e42bda38e

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -18,6 +18,11 @@
         android:title="@string/display_settings"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+        <Preference
+                android:key="hdmi"
+                android:title="@string/kk_hdmi_modes_title"
+                android:persistent="false"/>
+
         <com.android.settings.BrightnessPreference
                 android:title="@string/brightness"
                 android:persistent="false"/>
