--- a/res/layout/kk_keyoverride_list.xml
+++ b/res/layout/kk_keyoverride_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:src="@android:drawable/ic_delete" />
+        android:src="@android:drawable/ic_menu_delete" />
 
     <TextView
         android:id="@+id/keylabel"
