--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -218,12 +218,26 @@
      <item>Search</item>
      <item>Menu</item>
      <item>Tab</item>
+     <item>Space</item>
      <item>Enter</item>
      <item>BackSpace</item>
-	 <item>Left</item>
+
+     <item>Shift Left</item>
+     <item>Shift Right</item>
+     <item>Ctrl Left</item>
+     <item>Ctrl Right</item>
+     <item>Alt Left</item>
+     <item>Alt Right</item>
+
+     <item>Left</item>
      <item>Right</item>
      <item>Up</item>
      <item>Down</item>
+
+     <item>Move Home</item>
+     <item>Move End</item>
+     <item>Page Up</item>
+     <item>Page Down</item>
     </string-array>
    
     <string-array name="kk_keyoverride_special_values">
@@ -232,12 +246,26 @@
      <item>84</item>
      <item>82</item>
      <item>61</item>
+     <item>62</item>
      <item>66</item>
      <item>67</item>
+
+     <item>59</item>
+     <item>60</item>
+     <item>113</item>
+     <item>114</item>
+     <item>57</item>
+     <item>58</item>
+
      <item>21</item>
-	 <item>22</item>
+     <item>22</item>
      <item>19</item>
      <item>20</item>
+
+     <item>122</item>
+     <item>123</item>
+     <item>92</item>
+     <item>93</item>
     </string-array>
     
 <!-- styles  -->
