--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -145,6 +145,8 @@
     <string-array name="kk_action_dialog_entries">
         <item>Start Application</item>
         <item>Switch Top Application between SplitView and FullScreen</item>
+        <item>Switch Top Application between 1st SplitView Slot and FullScreen</item>
+        <item>Switch Top Application between 2nd SplitView Slot and FullScreen</item>
         <item>Display Recent Apps</item>
         <item>Switch To Previous App</item>
         <item>Take screenshot</item>
@@ -157,6 +159,8 @@
     <string-array name="kk_action_dialog_values">
         <item>app</item>
         <item>splitview_auto</item>
+        <item>splitview_1</item>
+        <item>splitview_2</item>
         <item>recent</item>
         <item>switch_toprevious_task</item>
         <item>screenshot</item>
