Add ChangeLog in Settings => About tablet
Change-Id: I8148244dd6de1d7f65cff148eced6a4a18f1d29d

--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -100,6 +100,8 @@
     <string name="altL">AltL</string>    
     <string name="altR">AltR</string>    
 
+    <string name="changelog">ChangeLog</string>
+
     <!-- touchpad mode -->
     <string name="touchpad_mode_selector">Touchpad mode</string>
     <string name="touchpad_setting_title">Touchpad</string>
