--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -155,6 +155,8 @@
     
     <string-array name="kk_action_dialog_entries">
         <item>Start Application</item>
+        <item>Expanded Desktop</item>
+        <item>Expanded Desktop Keep Top Status Bar (PhabletUI Only)</item>
         <item>Switch Top Application between SplitView and FullScreen</item>
         <item>Switch Top Application between 1st SplitView Slot and FullScreen</item>
         <item>Switch Top Application between 2nd SplitView Slot and FullScreen</item>
@@ -169,6 +171,8 @@
     </string-array>
     <string-array name="kk_action_dialog_values">
         <item>app</item>
+        <item>expanded_desktop</item>
+        <item>expanded_desktop_keepstatusbar</item>
         <item>splitview_auto</item>
         <item>splitview_1</item>
         <item>splitview_2</item>
