--- a/res/values/kat.xml
+++ b/res/values/kat.xml
@@ -160,8 +160,10 @@
         <item>Switch Top Application between SplitView and FullScreen</item>
         <item>Switch Top Application between 1st SplitView Slot and FullScreen</item>
         <item>Switch Top Application between 2nd SplitView Slot and FullScreen</item>
-        <item>Display Recent Apps</item>
         <item>Switch To Previous App</item>
+        <item>Display Recent Apps</item>
+        <item>Display Notifications Panel</item>
+        <item>Display Quick Settings Panel</item>
         <item>Take screenshot</item>
         <item>Kill process</item>
         <item>Screen off</item>
@@ -176,8 +178,10 @@
         <item>splitview_auto</item>
         <item>splitview_1</item>
         <item>splitview_2</item>
-        <item>recent</item>
         <item>switch_toprevious_task</item>
+        <item>recent</item>
+        <item>show_notifications_panel</item>
+        <item>show_settings_panel</item>
         <item>screenshot</item>
         <item>killcurrent</item>
         <item>screenoff</item>
